tests/paczka1/small_fuzzy/75819868.err
Error in line 10: VRBS6FO S381 622,1
Error in line 11: VRBS6FO S419 18,2
